# test_task

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
client/: CMakeLists.txt
client/src/: common.h  main.cpp  net_server.cpp  net_server.h
common/: CMakeLists.txt
common/include/: packet.h
common/src/: packet.cpp
server/: CMakeLists.txt
server/src/: interval_timer.cpp  interval_timer.h  ipv4_header.hpp  main.cpp  pinger.cpp  pinger.h
